--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ftp.primeitclub.com
-          username: creativehub
+          username: creativehub@creativehub.primeitclub.com
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./out/
