--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.89.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "next": "15.4.5",
